Parameterize SpringScstAppStartersBuildMaker, add log sink CI plan